--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        buildConfigField "String", "BASE_URL", "\"https://libretranslate.de/\""
     }
 
     buildTypes {
@@ -88,4 +90,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     testImplementation 'androidx.test.ext:junit:1.1.3' // Compose test lib doesn't compile without this
+
+    /**
+     * ADDED LIBS
+     */
+    implementation "io.insert-koin:koin-android:3.2.0"
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
 }
